# QuakeLogParserCliApp

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  setup.sh
src/: main.rs
