[package]
name = "QuakeLogParserCliApp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
log = "0.4.14"
env_logger = "0.11.2"
quake_log_parser_lib = "0.1.6"
tokio = { version = "1.33.0", features = ["full"]}
serde = { version = "1.0.192", features = ["derive"]}
serde_json = "1.0.83"
chrono = "0.4.19"
